--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <body>
-	test
-	<a href="test2.html">test2</com>
+	<p>test</p>
+	<p></p><a href="test2.html">test2</com></p>
+	<p></p><a href="http://www.google.com">test2</com></p>
+	<p><a href="javascript: alert('Hello World');">alert</a></p>
 </body>
 </html>
