--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 	<p>test</p>
 	<p></p><a href="test2.html">test2</com></p>
-	<p></p><a href="http://www.google.com">test2</com></p>
+	<p></p><a href="http://www.google.com">google</com></p>
 	<p><a href="javascript: alert('Hello World');">alert</a></p>
 </body>
 </html>
