--- a/testflight_blank_issue.html
+++ b/testflight_blank_issue.html
@@ -1,4 +1,5 @@
 <html>
+<meta name="viewport" content="minimal-ui, width=device-width, user-scalable=no">
 <body>
     no target, works:<br>
     <a href="https://beta.itunes.apple.com/v1/invite/2c12ed2ee2674faab3f91713933d49fd28d25acca0f44e8282510272d72f06023ba0b318?ct=WWDCDemo22011&pt=2003">
